--- a/Bitunion/BitThreadPage.xaml
+++ b/Bitunion/BitThreadPage.xaml
@@ -24,23 +24,23 @@
 
         <!--TitlePanel 包含应用程序的名称和页标题-->
         <StackPanel Grid.Row="0" Margin="12,17,0,28">
-            <TextBlock x:Name="ThreadName" Text="页面名称" Margin="9,-7,12,0" Style="{StaticResource PhoneTextTitle1Style}" FontSize="24"/>
+            <TextBlock x:Name="ThreadName"   TextWrapping="Wrap" Text="页面名称页面名称页面名称页面名称页面名称页面名称页面名称页面名称页面名称页面名称页面名称" Margin="9,-7,12,0" Style="{StaticResource PhoneTextTitle1Style}" FontSize="24"/>
         </StackPanel>
 
         <!--ContentPanel - 在此处放置其他内容-->
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="24,0,10,10">
             <!--具有文字环绕的双线列表-->
-            <phone:LongListSelector x:Name="Thread" ItemsSource="{Binding PostItems}" Height="688" VerticalAlignment="Top" HorizontalAlignment="Right" Width="446"  >
+            <phone:LongListSelector x:Name="Thread" ItemsSource="{Binding PostItems}" Height="632" VerticalAlignment="Top" Margin="-13,-13,-6,-67" HorizontalAlignment="Right" Width="465"  >
                 <phone:LongListSelector.ItemTemplate>
                     <DataTemplate>
-                        <StackPanel Margin="0,0,2,0">               
+                        <StackPanel Margin="0,0,-11,0">               
                             <Border BorderThickness="5,1,0,0" Height="32" HorizontalAlignment="Left" Width="457">
-                                <TextBlock Text="{Binding AddInfo}" TextWrapping="Wrap" Style="{StaticResource PhoneTextExtraLargeStyle}" FontSize="20" Margin="12,0"/>
+                                <TextBlock Text="{Binding AddInfo}" TextWrapping="Wrap" Style="{StaticResource PhoneTextSubtleStyle}" FontSize="20" Margin="3,0,-3,0"/>
                                 <Border.BorderBrush>
                                     <SolidColorBrush Color="{StaticResource PhoneAccentColor}"/>
                                 </Border.BorderBrush>                         
                             </Border>
-                            <TextBlock Text="{Binding Message}" TextWrapping="Wrap" Style="{StaticResource PhoneTextExtraLargeStyle}" FontSize="24"/>
+                            <TextBlock Text="{Binding Message}" TextWrapping="Wrap" Style="{StaticResource PhoneTextExtraLargeStyle}" FontSize="24" Margin="3,0,12,0" Height="88"/>
                             <Button Content="引用" HorizontalAlignment="Right" Margin="0,0,0,0" VerticalAlignment="Bottom" Width="90" Height="66" FontSize="18"/>
                         </StackPanel>
                     </DataTemplate>
@@ -53,7 +53,7 @@
 
             <shell:ApplicationBarIconButton x:Name="reply" IconUri="/Images/reply.png" Text="回复" Click="reply_click" />
             <shell:ApplicationBarIconButton x:Name="prev" IconUri="/Images/prev.png" Text="上一页" Click="Prev_Click" />
-            <shell:ApplicationBarIconButton x:Name="next" IconUri="/Images/next.png" Text="help" Click="Next_Click" />
+            <shell:ApplicationBarIconButton x:Name="next" IconUri="/Images/next.png" Text="下一页" Click="Next_Click" />
            
             <!--<shell:ApplicationBar.MenuItems>
                 <shell:ApplicationBarMenuItem Text="get default size value" Click="MenuItem1_Click" />
