增加主界面刷新和论坛列表VM及滑动时间，但论坛列表的JSON串解析仍需时间

--- a/Bitunion/SampleData/MainViewModelSampleData.xaml
+++ b/Bitunion/SampleData/MainViewModelSampleData.xaml
@@ -5,7 +5,11 @@
     xmlns:pm="clr-namespace:Bitunion.ViewModels"
     SampleProperty="示例文本属性值">
 
-    <vm:MainViewModel.Items>
+    <vm:MainViewModel.LatestThreadItems>
         <vm:BitThreadModel Subject="设计一" Author="Maecenas praesent accumsan bibendum" ForumName="Maecenas praesent accumsan bibendum dictumst eleifend facilisi faucibus habitant inceptos interdum lobortis nascetur"/>
-    </vm:MainViewModel.Items>
+    </vm:MainViewModel.LatestThreadItems>
+    <vm:MainViewModel.ForumItems>
+        <vm:ForumViewModel Name="论坛名" Description="Maecenas praesent accumsan bibendum" Onlines="10"/>
+    </vm:MainViewModel.ForumItems>
+
 </vm:MainViewModel>
