--- a/Bitunion/MainPage.xaml
+++ b/Bitunion/MainPage.xaml
@@ -37,7 +37,7 @@
          -->
 
         <!--枢轴控件-->
-        <phone:Pivot Title="我的应用程序">
+        <phone:Pivot x:Name="MainPagePivot" Title="BitUnion" SelectionChanged="MainPagePivot_SelectionChanged" FontSize="48">
             <!--枢轴项一-->
             <phone:PivotItem Header="最新帖子">
                 <!--具有文字环绕的双线列表-->
@@ -57,13 +57,14 @@
             <!--枢轴项二-->
             <phone:PivotItem Header="论坛列表">
                 <!--无文字环绕的双线列表-->
-                <phone:LongListSelector Margin="0,0,-12,0" ItemsSource="{Binding Items}">
+                <phone:LongListSelector Margin="0,0,-12,0" ItemsSource="{Binding ForumItems}">
                     <phone:LongListSelector.ItemTemplate>
                             <DataTemplate>
                                 <StackPanel Margin="0,0,0,17">
-                                    <!--<TextBlock Text="{Binding LineOne}" TextWrapping="NoWrap" Margin="12,0,0,0" Style="{StaticResource PhoneTextExtraLargeStyle}"/>
-                                    <TextBlock Text="{Binding LineThree}" TextWrapping="NoWrap" Margin="12,-6,0,0" Style="{StaticResource PhoneTextSubtleStyle}"/>-->
-                                </StackPanel>
+                                        <TextBlock Text="{Binding Name}" TextWrapping="Wrap" Style="{StaticResource PhoneTextExtraLargeStyle}" FontSize="30" Margin="12,0,64,0" HorizontalAlignment="Left"/>
+                                       <TextBlock Text="{Binding Description}" TextWrapping="Wrap" Margin="12,-6,0,0" Style="{StaticResource PhoneTextSubtleStyle}" HorizontalAlignment="Left"/>
+                                       <TextBlock Text="{Binding Onlines}" TextWrapping="Wrap" Margin="0,-64,12,0" Style="{StaticResource PhoneTextSubtleStyle}" Height="47" Width="47" TextAlignment="Center" HorizontalAlignment="Right" FontSize="36" Foreground="{StaticResource PhoneAccentBrush}"/>
+                                 </StackPanel>
                             </DataTemplate>
                     </phone:LongListSelector.ItemTemplate>
                 </phone:LongListSelector>
@@ -79,5 +80,17 @@
             在发送之前删除此 XAML 和图像本身。-->
         <!--<Image Source="/Assets/AlignmentGrid.png" VerticalAlignment="Top" Height="800" Width="480" Margin="0,-32,0,0" Grid.Row="0" IsHitTestVisible="False" />-->
     </Grid>
+    <phone:PhoneApplicationPage.ApplicationBar>
+        <shell:ApplicationBar IsVisible="True" IsMenuEnabled="True" Mode="Minimized" Opacity="0.5" >
 
+            <shell:ApplicationBarIconButton x:Name="refreshbtn" IconUri="/Images/refresh.png" Text="刷新" Click="refresh_click" />
+            <!--<shell:ApplicationBarIconButton x:Name="prev" IconUri="/Images/prev.png" Text="上一页" Click="Prev_Click" />
+            <shell:ApplicationBarIconButton x:Name="next" IconUri="/Images/next.png" Text="下一页" Click="Next_Click" />-->
+
+            <!--<shell:ApplicationBar.MenuItems>
+                <shell:ApplicationBarMenuItem Text="进入该板块" Click="Enter_Click" />
+            </shell:ApplicationBar.MenuItems>-->
+
+        </shell:ApplicationBar>
+    </phone:PhoneApplicationPage.ApplicationBar>
 </phone:PhoneApplicationPage>
