--- a/Bitunion/BuForumPage.xaml
+++ b/Bitunion/BuForumPage.xaml
@@ -16,10 +16,13 @@
     <!--LayoutRoot 是包含所有页面内容的根网格-->
     <Grid x:Name="LayoutRoot" Background="Transparent">
         <!--枢轴控件-->
-        <phone:Pivot Title="我的应用程序">
+        <phone:Pivot x:Name="ForumPivot" Title="Bitunion">
             <!--枢轴项一-->
-            <phone:PivotItem x:Name="ForumName" Header="item1">
-                <phone:LongListSelector x:Name="ThreadViewList" Margin="0,0,-12,0" ItemsSource="{Binding Items}" SelectionChanged="LongListSelector_SelectionChanged_1">
+            <phone:PivotItem x:Name="Forum">
+                <phone:PivotItem.Header>
+                    <TextBlock Text="item1" Name="pivotItem1"></TextBlock>
+                   </phone:PivotItem.Header>
+                <phone:LongListSelector x:Name="ThreadViewList" Margin="0,0,-12,0" ItemsSource="{Binding ThreadItems}" SelectionChanged="LongListSelector_SelectionChanged_1">
                     <phone:LongListSelector.ItemTemplate>
                         <DataTemplate>
                             <StackPanel Margin="0,0,0,17">
@@ -37,6 +40,17 @@
                 <Grid/>
             </phone:PivotItem>
         </phone:Pivot>
+        <ProgressBar x:Name="pgbar" HorizontalAlignment="Left" Height="13" VerticalAlignment="Top" Width="480" IsIndeterminate="True" Margin="0"/>
     </Grid>
-    
+    <phone:PhoneApplicationPage.ApplicationBar>
+        <shell:ApplicationBar IsVisible="True" IsMenuEnabled="True" Mode="Default" Opacity="1.0" >
+
+            <shell:ApplicationBarIconButton x:Name="refresh" IconUri="/Images/refresh.png" Text="刷新" Click="refresh_click" />
+            <shell:ApplicationBarIconButton x:Name="prev" IconUri="/Images/prev.png" Text="上一页" Click="Prev_Click" />
+            <shell:ApplicationBarIconButton x:Name="next" IconUri="/Images/next.png" Text="下一页" Click="Next_Click" />
+      
+
+        </shell:ApplicationBar>
+    </phone:PhoneApplicationPage.ApplicationBar>
+
 </phone:PhoneApplicationPage>
