--- a/Bitunion/SampleData/ThreadViewModelSampleData.xaml
+++ b/Bitunion/SampleData/ThreadViewModelSampleData.xaml
@@ -1,8 +1,7 @@
 ﻿<vm:ThreadViewModel
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:vm="clr-namespace:Bitunion.ViewModels"
-    SampleProperty="示例文本属性值">
+    xmlns:vm="clr-namespace:Bitunion.ViewModels">
 
     <vm:ThreadViewModel.PostItems>
         <vm:PostViewModel Message="测试主贴内容" AddInfo="作者"/>
@@ -10,5 +9,5 @@
         <vm:PostViewModel Message="测试主贴内容" AddInfo="作者"/>
         <vm:PostViewModel Message="测试主贴内容" AddInfo="作者"/>
         <vm:PostViewModel Message="测试主贴内容" AddInfo="作者"/>
-        </vm:ThreadViewModel.PostItems>
+    </vm:ThreadViewModel.PostItems>
     </vm:ThreadViewModel>
