--- a/Bitunion/LoginPage.xaml
+++ b/Bitunion/LoginPage.xaml
@@ -28,12 +28,12 @@
 
         <!--ContentPanel - 在此处放置其他内容-->
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
-            <TextBox HorizontalAlignment="Left" Height="72" Margin="131,35,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="315" FontSize="36"/>
+            <TextBox x:Name="ID" HorizontalAlignment="Left" Height="72" Margin="131,35,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="315" FontSize="24"/>
             <TextBlock HorizontalAlignment="Left" Margin="38,42,0,0" TextWrapping="Wrap" Text="账号:" VerticalAlignment="Top" FontSize="36"/>
             <TextBlock HorizontalAlignment="Left" Margin="38,125,0,0" TextWrapping="Wrap" Text="密码:" VerticalAlignment="Top" FontSize="36"/>
             <CheckBox Content="记住密码" HorizontalAlignment="Left" Margin="38,190,0,0" VerticalAlignment="Top"/>
             <CheckBox Content="自动登录" HorizontalAlignment="Left" Margin="263,190,0,0" VerticalAlignment="Top"/>
-            <PasswordBox HorizontalAlignment="Left" Margin="131,113,0,0" VerticalAlignment="Top" Width="315"/>
+            <PasswordBox x:Name="Password" HorizontalAlignment="Left" Margin="131,113,0,0" VerticalAlignment="Top" Width="315" FontSize="24"/>
         </Grid>
         
         
