--- a/Bitunion/LoginPage.xaml
+++ b/Bitunion/LoginPage.xaml
@@ -14,32 +14,37 @@
     shell:SystemTray.IsVisible="True">
 
     <!--LayoutRoot 是包含所有页面内容的根网格-->
-    <Grid x:Name="LayoutRoot" Background="Transparent">
+    <Grid x:Name="LayoutRoot">
+        <Grid.Background>
+            <ImageBrush x:Name="BkPic" ImageSource="/Images/loginpage.png"  Opacity ="0.5"/>
+        </Grid.Background>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
         <!--TitlePanel 包含应用程序的名称和页标题-->
-        <StackPanel Grid.Row="0" Margin="12,17,0,28">
+        <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="12,17,0,28">
             <TextBlock Text="Bitunion" Style="{StaticResource PhoneTextNormalStyle}"/>
             <TextBlock Text="登陆" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
         </StackPanel>
 
         <!--ContentPanel - 在此处放置其他内容-->
-        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
+        <Grid x:Name="GridContent" Grid.Row="1" Margin="12,0,12,0">
             <TextBox x:Name="ID" HorizontalAlignment="Left" Height="72" Margin="131,35,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="315" FontSize="24"/>
             <TextBlock HorizontalAlignment="Left" Margin="38,42,0,0" TextWrapping="Wrap" Text="账号:" VerticalAlignment="Top" FontSize="36"/>
             <TextBlock HorizontalAlignment="Left" Margin="38,125,0,0" TextWrapping="Wrap" Text="密码:" VerticalAlignment="Top" FontSize="36"/>
-            <CheckBox Content="记住密码" HorizontalAlignment="Left" Margin="38,190,0,0" VerticalAlignment="Top"/>
-            <CheckBox Content="自动登录" HorizontalAlignment="Left" Margin="263,190,0,0" VerticalAlignment="Top"/>
+            <CheckBox x:Name="isRemPassword" Content="记住密码" HorizontalAlignment="Left" Margin="38,190,0,0" VerticalAlignment="Top" CacheMode="BitmapCache" IsChecked="True" Click="isRemPassword_Click"/>
+            <CheckBox x:Name="isAutoLogin" Content="自动登录" HorizontalAlignment="Left" Margin="263,190,0,0" VerticalAlignment="Top" IsChecked="True"/>
             <PasswordBox x:Name="Password" HorizontalAlignment="Left" Margin="131,113,0,0" VerticalAlignment="Top" Width="315" FontSize="24"/>
         </Grid>
-        
-        
+        <ProgressBar x:Name="PgBar" HorizontalAlignment="Left" Height="15" Margin="12,2,0,0" VerticalAlignment="Top" Width="456" IsIndeterminate="True"/>
+        <TextBlock HorizontalAlignment="Left" Margin="28,0,0,73" Grid.Row="1" TextWrapping="Wrap" Text="      “那些在阳光下挥洒青春的日子啊”" RenderTransformOrigin="-2.73,0.436" Width="416" FontSize="32" FontFamily="Arial Black" FontStyle="Italic" FontWeight="Bold" Height="94" VerticalAlignment="Bottom"/>
+
+
     </Grid>
     <phone:PhoneApplicationPage.ApplicationBar>
-        <shell:ApplicationBar x:Name="ForumAppBar" IsVisible="True" IsMenuEnabled="True" Mode="Default" Opacity="1.0" >
+        <shell:ApplicationBar x:Name="ForumAppBar" IsVisible="True" IsMenuEnabled="True" Mode="Default" Opacity="0.5" >
             <shell:ApplicationBarIconButton x:Name="longin" IconUri="/Images/login.png" Text="登录" Click="login_click" />
         </shell:ApplicationBar>
     </phone:PhoneApplicationPage.ApplicationBar>
