--- a/Bitunion/SampleData/MainViewModelSampleData.xaml
+++ b/Bitunion/SampleData/MainViewModelSampleData.xaml
@@ -2,14 +2,13 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:vm="clr-namespace:Bitunion.ViewModels"
-    xmlns:pm="clr-namespace:Bitunion.ViewModels"
-    SampleProperty="示例文本属性值">
+    xmlns:pm="clr-namespace:Bitunion.ViewModels">
 
     <vm:MainViewModel.LatestThreadItems>
         <vm:ThreadViewModel Subject="设计一" Author="Maecenas praesent accumsan bibendum" ForumName="Maecenas praesent accumsan bibendum dictumst eleifend facilisi faucibus habitant inceptos interdum lobortis nascetur"/>
     </vm:MainViewModel.LatestThreadItems>
     <vm:MainViewModel.ForumItems>
-        <vm:ForumViewModel Name="论坛名" Description="Maecenas praesent accumsan bibendum" Onlines="10"/>
+        <vm:ForumViewModel Description="Maecenas praesent accumsan bibendum" Onlines="10"/>
     </vm:MainViewModel.ForumItems>
 
 </vm:MainViewModel>
