--- a/Bitunion/App.xaml
+++ b/Bitunion/App.xaml
@@ -3,12 +3,28 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
+    xmlns:local="clr-namespace:Bitunion"
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone">
 
     <!--应用程序资源-->
     <Application.Resources>
         <local:LocalizedStrings xmlns:local="clr-namespace:Bitunion" x:Key="LocalizedStrings"/>
         <converter:QuoteConverter xmlns:converter="clr-namespace:Bitunion.Converter" x:Key="QuoteConverter" />
+        <Style x:Key="SuperTextBlockSytle"  TargetType="local:EyeableTextBlock" >
+            <Setter Property="Foreground" Value="{StaticResource PhoneForegroundBrush}"/>
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="FontSize" Value="{StaticResource PhoneFontSizeMedium}"/>
+            <Setter Property="Padding" Value="0"/>
+            <Setter Property="Width" Value="480" />
+            <Setter Property="Height" Value="Auto" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="local:EyeableTextBlock">
+                        <StackPanel Orientation="Vertical" x:Name="StackPanel"/>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
     </Application.Resources>
 
     <Application.ApplicationLifetimeObjects>
