--- a/Bitunion/BuThreadPage.xaml
+++ b/Bitunion/BuThreadPage.xaml
@@ -33,21 +33,20 @@
         </StackPanel>
 
         <!--ContentPanel - 在此处放置其他内容-->
-        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="24,0,10,10">
+        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="0,0,0,10">
 
             <!--具有文字环绕的双线列表-->
-            <phone:LongListSelector x:Name="ThreadLLS" ItemsSource="{Binding PostItems}" Height="632" VerticalAlignment="Top" Margin="-13,-13,-6,-67" HorizontalAlignment="Right" Width="465"  >
-                <phone:LongListSelector.ItemTemplate>
+           <ScrollViewer HorizontalAlignment="Left" Margin="0,0,0,0" Name="scrollViewer" VerticalAlignment="Top" Width="480" Height="552">
+            <ItemsControl HorizontalAlignment="Left" ItemsSource="{Binding PostItems}" Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="4" Grid.RowSpan="1" Width="480"  >
+                <ItemsControl.ItemTemplate>
                     <DataTemplate>
                         <StackPanel x:Name="PostPanel" Margin="0,0,-11,0">               
-                         
-                             <TextBlock Text="{Binding AddInfo}" TextWrapping="Wrap" Style="{StaticResource PhoneTextSubtleStyle}" FontSize="20" Margin="3,15,-3,15"/>
-                           
+                           <TextBlock Text="{Binding AddInfo}" TextWrapping="Wrap" Style="{StaticResource PhoneTextSubtleStyle}" FontSize="20" Margin="6,15,-3,15"/>
                             <ItemsControl HorizontalAlignment="Left" ItemsSource="{Binding QuoteItems}" Visibility="{Binding QuoteItems,Converter={StaticResource QuoteConverter}}" Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="4" Grid.RowSpan="1" Margin="30,0" >
                                 <ItemsControl.ItemTemplate>
                                     <DataTemplate>
                                         <StackPanel Margin="0">
-                                            <Border BorderThickness="0,0,0,0"  HorizontalAlignment="Left" Background="#FF494747" Margin="0">
+                                            <Border BorderThickness="0,0,0,0"  HorizontalAlignment="Left" Background="#FF494747" Margin="0,5,0,0">
                                                 <TextBlock Text="{Binding QuoteMsg}"  TextWrapping="Wrap" FontSize="20" Margin="3,0,-3,0" Width="400" Padding="5,0,10,5"/>
                                             </Border>                                        
                                         </StackPanel>
@@ -56,15 +55,21 @@
                             </ItemsControl>
                             <!--<Border BorderThickness="0,0,0,1"  HorizontalAlignment="Left" Width="457" Padding="0,0,0,5">-->
 
+                            <!--ContentPanel - 在此处放置其他内容-->
+                        
+                            <!--<ScrollViewer HorizontalAlignment="Left" Margin="0,0,0,0" Name="scrollViewer" VerticalAlignment="Top" Width="456">-->
+                                       
+                            <local:EyeableTextBlock Style="{StaticResource SuperTextBlockSytle}" FontSize="24" Text="{Binding Message}" Margin="0,15" Padding="0,0,5,0"  />
+                                  
+                            <!--</ScrollViewer>-->
+                                <!--<TextBlock Text="{Binding Message}"  TextWrapping="Wrap" FontSize="24" Margin="6,0,32,0" Padding="5,0,10,5"/>-->
 
 
 
 
-                          
-               
-                    
-                            
-                            <ItemsControl HorizontalAlignment="Left" ItemsSource="{Binding MsgItems}" Visibility="{Binding QuoteItems}" Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="4" Grid.RowSpan="1" >
+
+
+                                <!--<ItemsControl HorizontalAlignment="Left" ItemsSource="{Binding MsgItems}" Visibility="{Binding QuoteItems}" Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="4" Grid.RowSpan="1" >
                                 <ItemsControl.ItemTemplate>
                                     <DataTemplate>
                                         <StackPanel Margin="0">
@@ -72,7 +77,7 @@
                                         </StackPanel>
                                     </DataTemplate>
                                 </ItemsControl.ItemTemplate>
-                            </ItemsControl>
+                            </ItemsControl>-->
 
                          
                                 <!--<Border.BorderBrush>
@@ -81,15 +86,16 @@
                             </Border>-->      
                             <!--<Button Content="引用" HorizontalAlignment="Right" Margin="0,0,0,0" VerticalAlignment="Bottom" Width="90" Height="66" FontSize="18"/>-->
                             <Image CacheMode="BitmapCache" Source="{Binding ImageSrc}"  Stretch="Uniform" Tap="OnImageTap" Margin="30,0,12,0" />
-                            <Border BorderThickness="0,0,0,1"  HorizontalAlignment="Left" Width="457" Padding="0,0,0,5">
+                            <Border BorderThickness="0,0,0,1"  HorizontalAlignment="Left" Width="447" Padding="0,0,0,5" Margin="12,0,0,0">
                             <Border.BorderBrush>
                                     <SolidColorBrush Color="{StaticResource PhoneAccentColor}"/>
                                 </Border.BorderBrush>
                             </Border>
                         </StackPanel>
                     </DataTemplate>
-                </phone:LongListSelector.ItemTemplate>
-            </phone:LongListSelector>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+           </ScrollViewer>
         </Grid>
         <ProgressBar x:Name="pgbar" HorizontalAlignment="Left" Height="10" Margin="8,0,0,0" VerticalAlignment="Top" Width="458" IsIndeterminate="True"/>
     </Grid>
