--- a/Bitunion/BuThreadPage.xaml
+++ b/Bitunion/BuThreadPage.xaml
@@ -47,46 +47,22 @@
                                     <DataTemplate>
                                         <StackPanel Margin="0">
                                             <Border BorderThickness="0,0,0,0"  HorizontalAlignment="Left" Background="#FF494747" Margin="0,5,0,0">
-                                                <TextBlock Text="{Binding QuoteMsg}"  TextWrapping="Wrap" FontSize="20" Margin="3,0,-3,0" Width="400" Padding="5,0,10,5"/>
+                                                <TextBlock Text="{Binding QuoteMsg}"  TextWrapping="Wrap" FontSize="24" Margin="3,0,-3,0" Width="400" Padding="5,0,10,5"/>
                                             </Border>                                        
                                         </StackPanel>
                                     </DataTemplate>
                                 </ItemsControl.ItemTemplate>
                             </ItemsControl>
-                            <!--<Border BorderThickness="0,0,0,1"  HorizontalAlignment="Left" Width="457" Padding="0,0,0,5">-->
-
-                            <!--ContentPanel - 在此处放置其他内容-->
-                        
-                            <!--<ScrollViewer HorizontalAlignment="Left" Margin="0,0,0,0" Name="scrollViewer" VerticalAlignment="Top" Width="456">-->
-                                       
-                            <local:EyeableTextBlock Style="{StaticResource SuperTextBlockSytle}" FontSize="24" Text="{Binding Message}" Margin="0,15" Padding="0,0,5,0"  />
-                                  
-                            <!--</ScrollViewer>-->
-                                <!--<TextBlock Text="{Binding Message}"  TextWrapping="Wrap" FontSize="24" Margin="6,0,32,0" Padding="5,0,10,5"/>-->
-
-
-
-
-
-
-                                <!--<ItemsControl HorizontalAlignment="Left" ItemsSource="{Binding MsgItems}" Visibility="{Binding QuoteItems}" Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="4" Grid.RowSpan="1" >
-                                <ItemsControl.ItemTemplate>
-                                    <DataTemplate>
-                                        <StackPanel Margin="0">
-                                            <TextBlock Text="{Binding Message}" TextWrapping="Wrap" Style="{StaticResource PhoneTextExtraLargeStyle}" FontSize="24" Margin="0,0,0,0"/>
-                                        </StackPanel>
-                                    </DataTemplate>
-                                </ItemsControl.ItemTemplate>
-                            </ItemsControl>-->
-
-                         
-                                <!--<Border.BorderBrush>
-                                    <SolidColorBrush Color="{StaticResource PhoneAccentColor}"/>
-                                </Border.BorderBrush>
-                            </Border>-->      
+     
+                            <local:EyeableTextBlock Style="{StaticResource SuperTextBlockSytle}" FontSize="25" Text="{Binding Message}" Margin="6,15,12,15" Padding="0,0,5,0" Width="Auto"  />
+                                                
                             <!--<Button Content="引用" HorizontalAlignment="Right" Margin="0,0,0,0" VerticalAlignment="Bottom" Width="90" Height="66" FontSize="18"/>-->
-                            <Image CacheMode="BitmapCache" Source="{Binding ImageSrc}"  Stretch="Uniform" Tap="OnImageTap" Margin="30,0,12,0" />
-                            <Border BorderThickness="0,0,0,1"  HorizontalAlignment="Left" Width="447" Padding="0,0,0,5" Margin="12,0,0,0">
+                              
+                                    <TextBlock Text="本帖包含图片附件: "  Visibility="{Binding ImageSrc, Converter={StaticResource ImgConverter}}"   FontSize="25" Margin="6,15,12,15"/>
+                                  
+                                      <Image CacheMode="BitmapCache" Source="{Binding ImageSrc}"  Stretch="Uniform" Tap="OnImageTap" Margin="12,0,32,0" ImageFailed="Image_ImageFailed_1" ImageOpened="Image_ImageOpened_1" />
+                    
+                                <Border BorderThickness="0,0,0,1"  HorizontalAlignment="Left" Width="447" Padding="0,0,0,5" Margin="12,0,0,0">
                             <Border.BorderBrush>
                                     <SolidColorBrush Color="{StaticResource PhoneAccentColor}"/>
                                 </Border.BorderBrush>
@@ -97,6 +73,7 @@
             </ItemsControl>
            </ScrollViewer>
         </Grid>
+        
         <ProgressBar x:Name="pgbar" HorizontalAlignment="Left" Height="10" Margin="8,0,0,0" VerticalAlignment="Top" Width="458" IsIndeterminate="True"/>
     </Grid>
     <phone:PhoneApplicationPage.ApplicationBar>
