--- a/Bitunion/LoginPage.xaml
+++ b/Bitunion/LoginPage.xaml
@@ -11,7 +11,8 @@
     Foreground="{StaticResource PhoneForegroundBrush}"
     SupportedOrientations="Portrait" Orientation="Portrait"
     mc:Ignorable="d"
-    shell:SystemTray.IsVisible="True">
+    shell:SystemTray.IsVisible="True"
+    xmlns:toolkit ="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit">
 
     <!--LayoutRoot 是包含所有页面内容的根网格-->
     <Grid x:Name="LayoutRoot">
@@ -31,12 +32,10 @@
 
         <!--ContentPanel - 在此处放置其他内容-->
         <Grid x:Name="GridContent" Grid.Row="1" Margin="12,0,12,0">
-            <TextBox x:Name="ID" HorizontalAlignment="Left" Height="72" Margin="131,35,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="315" FontSize="24"/>
-            <TextBlock HorizontalAlignment="Left" Margin="38,42,0,0" TextWrapping="Wrap" Text="账号:" VerticalAlignment="Top" FontSize="36"/>
-            <TextBlock HorizontalAlignment="Left" Margin="38,125,0,0" TextWrapping="Wrap" Text="密码:" VerticalAlignment="Top" FontSize="36"/>
-            <CheckBox x:Name="isRemPassword" Content="记住密码" HorizontalAlignment="Left" Margin="38,190,0,0" VerticalAlignment="Top" CacheMode="BitmapCache" IsChecked="True" Click="isRemPassword_Click"/>
-            <CheckBox x:Name="isAutoLogin" Content="自动登录" HorizontalAlignment="Left" Margin="263,190,0,0" VerticalAlignment="Top" IsChecked="True"/>
-            <PasswordBox x:Name="Password" HorizontalAlignment="Left" Margin="131,113,0,0" VerticalAlignment="Top" Width="315" FontSize="24"/>
+            <toolkit:PhoneTextBox x:Name="ID" Hint="请输入账号" HorizontalAlignment="Left" Height="72" Margin="38,35,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="383" FontSize="24"/>
+            <PasswordBox x:Name="Password" Margin="38,113,35,0" VerticalAlignment="Top" FontSize="24"/>
+            <toolkit:ToggleSwitch x:Name="isRemPassword" HorizontalAlignment="Left" Margin="38,183,0,0" VerticalAlignment="Top" Content="开启" IsChecked="true" Unchecked="isRemPassword_Unchecked" Checked="isRemPassword_Checked" Width="383" Header="记住密码" />
+            <toolkit:ToggleSwitch x:Name="isAutoLogin" HorizontalAlignment="Left" Margin="38,286,0,0" VerticalAlignment="Top" Unchecked="isAutoLogin_Unchecked" IsChecked="true" Checked="isAutoLogin_Checked" Width="383" Header="自动登录" Content="开启"/>
         </Grid>
         <ProgressBar x:Name="PgBar" HorizontalAlignment="Left" Height="15" Margin="12,2,0,0" VerticalAlignment="Top" Width="456" IsIndeterminate="True"/>
         <TextBlock HorizontalAlignment="Left" Margin="28,0,0,73" Grid.Row="1" TextWrapping="Wrap" Text="      “那些在阳光下挥洒青春的日子”" RenderTransformOrigin="-2.73,0.436" Width="416" FontSize="32" FontFamily="Arial Black" FontStyle="Italic" FontWeight="Bold" Height="94" VerticalAlignment="Bottom"/>
