--- a/Bitunion/PopupPost.xaml
+++ b/Bitunion/PopupPost.xaml
@@ -8,14 +8,15 @@
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}" d:DesignWidth="480" Height="390.435">
 
-    <Grid x:Name="LayoutRoot" Width="480" Background="Black" Opacity="0.95">
-        <StackPanel Height="Auto" HorizontalAlignment="Left" Margin="12,35,0,0" Name="stackPanel1" VerticalAlignment="Top" Width="456">
-            <TextBlock Height="30" Name="textBlock1" Text="{Binding Title}" Foreground="SkyBlue" />
-        </StackPanel>
-        <StackPanel Height="Auto" HorizontalAlignment="Right" Margin="0,60,12,12" Name="grid1" VerticalAlignment="Top" Width="456">
-            <TextBox Height="72" HorizontalAlignment="Left" Name="titleTextBox" Text="{Binding title}" VerticalAlignment="Top" Width="456" />
-            <TextBox Height="Auto" MinHeight="180" MaxHeight="400"  HorizontalAlignment="Left" Name="contentTextBox" Text="{Binding content}" VerticalAlignment="Top" Width="456" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" AcceptsReturn="True" />
+    <Grid x:Name="LayoutRoot" Width="480" Background="Black" Opacity="0.95" Margin="0,0,0,-23">
+        <StackPanel Height="Auto" HorizontalAlignment="Left" Margin="12,35,0,0" Name="stackPanel1" VerticalAlignment="Top" Width="456"/>
+        <StackPanel Height="390" HorizontalAlignment="Right" Margin="0,13,12,0" Name="grid1" VerticalAlignment="Top" Width="456">
+            <TextBlock x:Name="titletextblock" Height="72" HorizontalAlignment="Left"    VerticalAlignment="Top" Width="456" />
+            <TextBox Height="72" HorizontalAlignment="Left" x:Name="titleTextBox"  VerticalAlignment="Top" Width="456" />
+            <TextBox Height="Auto" MinHeight="180" MaxHeight="400"  HorizontalAlignment="Left" x:Name="contentTextBox" Text="{Binding content}" VerticalAlignment="Top" Width="456" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" AcceptsReturn="True" />
             <Button Content="发布" Height="72" HorizontalAlignment="Right" x:Name="replyButton" VerticalAlignment="Top" Width="160" Click="OnClickReply" />
         </StackPanel>
+        <ProgressBar x:Name="PostPBar" HorizontalAlignment="Left" Height="8" Margin="12,0,0,0" VerticalAlignment="Top" Width="468"/>
+       
     </Grid>
 </UserControl>
